# Mania-Decomp-Mods

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  addmod.cmake  log.txt
src/extraplayers/: main.cpp  mod.ini
src/testmod/: main.cpp  mod.ini
